--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
 }
 .form-style{
   display: flex;
-    gap: 2rem;
-    margin: 3rem;
+  gap: 2rem;
+  margin-left: 10rem;
+}
+.form-style input {
+  margin:10px;
 }
