--- a/src/style/tile.css
+++ b/src/style/tile.css
@@ -1,16 +1,16 @@
 
 .tiles {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     margin: 3rem;
   }
   
   .tiles > div {
-    width: 100%;
+    width: auto;
     align-items: center;
     padding: 0.05rem;
     text-align: left;
-    margin: 1rem;
+    margin: 0 auto;
   }
   
   .tiles img {
@@ -33,7 +33,8 @@
   
   .pagination {
     position:absolute;
-    bottom: 10%;
+    bottom: 8%;
+    left: 30%;
     margin: 15px auto;
     display: flex;
     list-style: none;
