--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,12 @@
 }
 .form-style{
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   margin-left: 10rem;
+  margin-top:20px;
   font-weight: 400;
+  width:70%;
+  border: 1px solid  #47ccde;
 }
 .form-style input {
   margin:10px;
